# tic-tac-toe-solution

./: Makefile  pyproject.toml  readme.md
src/: cli.py  tic.py
tests/: test_tic.py
tic_tac_toe/: cli.py  find_winner.py  models.py  print.py
